--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
+    "moment": "^2.29.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
